workloads/menu-api/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: menu-api
spec: 
  selector: 
    app: menu-api                   # going to route traffic to pods with this label..
  ports:
    - name: http
      port: 80                      # what other pods/ingress call
      targetPort: http              # the container's named port (9898)
